--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "employee-tracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "Employee tracker",
   "main": "index.js",
   "dependencies": {
     "console.table": "^0.10.0",
-    "express": "^4.17.1",
     "inquirer": "^8.1.2",
     "mysql2": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Derimarg/employee-tracker.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Derimar Gray",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Derimarg/employee-tracker/issues"
